--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Huan-Yu Chen Resume</title>
+    <title>Huan-Yu Chen</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&amp;family=Roboto:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
@@ -28,7 +28,7 @@
     <header class="d-print-none">
       <div class="container text-center text-lg-left">
         <div class="pt-4 clearfix">
-          <h1 class="site-title mb-0">Huan-Yu Chen</h1>
+          <h1 class="site-title mb-0">Huan-Yu Chen(陳奐瑀)</h1>
           <div class="site-nav"> 
             <nav role="navigation">
               <ul class="nav justify-content-center">
@@ -63,8 +63,8 @@
             <div class="avatar p-1"><img class="img-thumbnail shadow-2-strong" src="images/hychen.jpg" width="160" height="160"/></div>
             <div class="header-bio mt-3">
               <div data-aos="zoom-in" data-aos-delay="0">
-                <h2 class="h1">Huan-Yu Chen</h2>
-                <p>Front-end Developer and Graphic Designer</p>
+                <h2 class="h1">Huan-Yu Chen(陳奐瑀)</h2>
+                <p>Assistant Professor</p>
               </div>
               <div class="header-social mb-3 d-print-none" data-aos="zoom-in" data-aos-delay="200">
                 <nav role="navigation">
@@ -92,41 +92,29 @@
       <div class="row">
         <div class="col-md-6">
           <h2 class="h2 fw-light mb-4">About Me</h2>
-          <p>Hello! I’m Huan-Yu Chen(陳奐瑀). I graduated from National Chung Hsing University with a PhD in Department of Electrical Engineering. I am Assistant Professor about UI/UX design and Web Design. </p>
+          <p>Hello! I’m Huan-Yu Chen(陳奐瑀). I graduated from National Chung Hsing University with a PhD in Department of Electrical Engineering.</p>
           <p>I have joined the Department of Computer Science and Information Engineering at National Taichung University of Science and Technology as a faculty member since August 1, 2023.</p>
         </div>
         <div class="col-md-5 offset-lg-1">
           <div class="row mt-2">
             <h2 class="h2 fw-light mb-4">Bio</h2>
             <div class="col-sm-5">
-              <div class="pb-2 fw-bolder"><i class="far fa-calendar-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Age</div>
-            </div>
-            <div class="col-sm-7">
-              <div class="pb-2">28</div>
-            </div>
-            <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Email</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">walter@company.com</div>
-            </div>
-            <div class="col-sm-5">
-              <div class="pb-2 fw-bolder"><i class="fab fa-skype pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Skype</div>
-            </div>
-            <div class="col-sm-7">
-              <div class="pb-2">username@skype.com</div>
+              <div class="pb-2">hychen@nutc.edu.tw,hychen@gm.nutc.edu.tw</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">+0718-111-0011</div>
+              <div class="pb-2">+886-4-22196320</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="fas fa-map-marker-alt pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Address</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">131 W, City Center, New York, U.S.A</div>
+              <div class="pb-2">No.129,Sec.3,Sanmin Rd, North Dist., Taichung City 404, Taiwan , R.O.C.</div>
             </div>
           </div>
         </div>
@@ -224,29 +212,20 @@
       <div class="timeline">
         <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="0">
           <div class="timeline-head px-4 pt-3">
-            <div class="h5">Masters in Information Technology <span class="text-muted h6">from International University</span>          </div>
+            <div class="h5">PhD in Department of Electrical Engineering <span class="text-muted h6">from National Chung Hsing University</span>          </div>
           </div>
           <div class="timeline-body px-4 pb-4">
-            <div class="text-muted text-small mb-3">2011 - 2013</div>
-            <div>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</div>
+            <div class="text-muted text-small mb-3">2006 - 2015</div>
+            <div>Researches of Image Retrieval and Classification for Adaptive Features Using Genetic Algorithm Feature Selection</div>
           </div>
         </div>
         <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="200">
           <div class="timeline-head px-4 pt-3">
-            <div class="h5">Bachelor of Computer Science <span class="text-muted h6">from Regional College</span>          </div>
+            <div class="h5">Masters in Department of Information Management <span class="text-muted h6">from National Yunlin University of Science and Technology</span>          </div>
           </div>
           <div class="timeline-body px-4 pb-4">
-            <div class="text-muted text-small mb-3">2007 - 2011</div>
-            <div>Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</div>
-          </div>
-        </div>
-        <div class="timeline-card timeline-card-success" data-aos="fade-in" data-aos-delay="400">
-          <div class="timeline-head px-4 pt-3">
-            <div class="h5">Science and Mathematics <span class="text-muted h6">from Mt. High Scool</span>          </div>
-          </div>
-          <div class="timeline-body px-4 pb-4">
-            <div class="text-muted text-small mb-3">1995 - 2007</div>
-            <div>User generated content in real-time will have multiple touchpoints for offshoring. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</div>
+            <div class="text-muted text-small mb-3">2002 - 2004</div>
+            <div>A Study of The Model on using UML Integration Component-Based College Academic Information Systems</div>
           </div>
         </div>
       </div>
@@ -324,8 +303,8 @@
       <div class="row mb-4">
         <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
           <div class="mt-1">
-            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +0718-111-0011</div>
-            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> walter@company.com</div>
+            <div class="h6"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> +886-4-22196320</div>
+            <div class="h6"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> hychen@nutc.edu.tw,hychen@gm.nutc.edu.tw</div>
           </div>
           <div class="mt-5 d-print-none"><form action="https://formspree.io/your@email.com"
     method="POST">
@@ -369,10 +348,6 @@
               </ul>
             </nav>
           </div>
-        </div>
-        <div class="text-small">
-          <div class="mb-1">&copy; Material Resume. All rights reserved.</div>
-          <div>Design - <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
         </div>
       </div>
     </footer>
