--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
               <div class="pb-2 fw-bolder"><i class="far fa-envelope pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Email</div>
             </div>
             <div class="col-sm-7">
-              <div class="pb-2">hychen@nutc.edu.tw</ BR>hychen@gm.nutc.edu.tw</div>
+              <div class="pb-2">hychen@nutc.edu.tw</div>
+              <div class="pb-2">hychen@gm.nutc.edu.tw</div>
             </div>
             <div class="col-sm-5">
               <div class="pb-2 fw-bolder"><i class="fas fa-phone pe-2 text-muted" style="width:24px;opacity:0.85;"></i> Phone</div>
